Add Topological cell